external-crates/move/crates/move-compiler/tests/move_check/parser/struct_native_with_fields.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_with_fields.move:3:21
  │
3 │     native struct S { f: u64 }
  │                     ^
  │                     │
  │                     Unexpected '{'
  │                     Expected ';'

error[E01002]: unexpected token
  ┌─ tests/move_check/parser/struct_native_with_fields.move:5:1
  │
5 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected a module member: 'spec', 'use', 'friend', 'const', 'fun', or 'struct'
