external-crates/move/crates/move-compiler/tests/move_check/parser/struct_native_with_fields.move
module 0x42::M {
    // Native structs should not specify fields.
    native struct S { f: u64 }
}
